<resources>
    <string name="app_name">Reminders</string>
    <string name="more_options">More options</string>
    <string name="my_calendar">My Calendar</string>
    <string name="contact_events">Birthdays &amp; Anniversaries</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="profile_name">User Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_internet">No internet connection.</string>
    <string name="internet_connected">Connected to the internet.</string>
    <string name="sign_in_success">Sign in successful.</string>
    <string name="sign_in_failure">Sign in failed.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="connection_failure">Connection failure!</string>
    <string name="logout">Logout</string>
    <string name="app_logo">App logo</string>
    <string name="logout_msg">Logged out successfully.</string>
    <string name="event_icon">Event icon</string>
    <string name="event_name">Event Name</string>
    <string name="event_desc">Event Description</string>
    <string name="meetings">Meetings</string>
    <string name="connect_with_outlook">Connect with Outlook</string>
    <string name="key_logout">LOGOUT</string>
    <string name="key_connect_with_outlook">CONNECT_WITH_OUTLOOK</string>
    <string name="connect_with_outlook_message">You are not connected to Outlook currently. To view your meetings, connect your Outlook account.</string>
    <string name="display_pic">Display pic</string>
    <string name="contacts_birthday">Contact\'s Birthday</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="cake_icon">Cake icon</string>
    <string name="wish_birthday">Wish Birthday</string>
    <string name="whatsapp_icon">WhatsApp Icon</string>
    <string name="call_icon">Call Icon</string>
    <string name="notes_icon">Notes Icon</string>
    <string name="notes">Notes</string>
    <string name="add_a_note">Add a note</string>
    <string name="delete_button">Delete Button</string>
</resources>
