<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_calendar"
            android:icon="@drawable/ic_one"
            android:title="@string/my_calendar"
            android:checked="true"/>
        <item
            android:id="@+id/item_contact_events"
            android:icon="@drawable/ic_two"
            android:title="@string/contact_events" />
        <item
            android:id="@+id/item_meetings"
            android:icon="@drawable/ic_two"
            android:title="@string/meetings" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_three"
            android:title="@string/settings" />

        <item
            android:id="@+id/item_test"
            android:icon="@drawable/ic_three"
            android:title="Test" />
    </group>

</menu>
